--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "88a560b0-7a9d-448c-8ef2-deacb6fb37f1",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "_cell_guid": "b11366bd-b985-4df1-9630-b2d57f60d0f0",
     "_uuid": "2da21fe9ea560ec76cded00d85f84caa7932a126",
@@ -39,12 +40,14 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import time\n",
+    "import seaborn as sns\n",
     "%matplotlib inline\n",
     "#import warnings\n",
     "#warnings.filterwarnings('ignore')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "e63ba51a-a82b-4e75-9f73-6ff5374b49f8",
@@ -61,13 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "_cell_guid": "096ddef0-fc1a-4a65-bd56-82e5b3ef3d96",
     "_uuid": "fdcb49f7845aae42bceb3216b3a2f09374c762ba",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Le chemin d’accès spécifié est introuvable: '/home/coder/work/ensae-reproductibilite-application'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#print(os.getcwd())\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m os\u001b[39m.\u001b[39;49mchdir(\u001b[39m'\u001b[39;49m\u001b[39m/home/coder/work/ensae-reproductibilite-application\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      5\u001b[0m TrainingData \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mtrain.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m TestData \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mtest.csv\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Le chemin d’accès spécifié est introuvable: '/home/coder/work/ensae-reproductibilite-application'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "#print(os.getcwd())\n",
@@ -81,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b02f3b71-dd0f-4c22-8e48-fc4ee8616e21",
     "_uuid": "5ceeb0b9a9ddd42db685a5e5f0503e01788a016a",
@@ -223,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "68fb208f-6c43-47c9-8716-077caef83898",
@@ -246,6 +262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -256,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "f6bd235e-5670-4d21-b0eb-bececfc1757a",
     "_uuid": "6c44f4bd0762061bedd908dcbe854b14ae9f0966",
@@ -291,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b12b1a12-5563-44ef-90a7-4a77b0a0d3f3",
     "_uuid": "7f46a31c1465fb979f9bfada8c17b01e0bd1c850",
@@ -324,6 +341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "aaf786a2-4fc4-45e5-a265-b3f7ab422eb4",
@@ -336,6 +354,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "a7117dc9-e37f-4a9c-9031-7684b1a0bbc4",
@@ -351,6 +370,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "96cd6010-dee3-4274-8623-55810a509868",
@@ -367,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "cd1e5c45-6156-4544-b705-b86ff92c6d38",
     "_uuid": "e0f993a30dc3620a76fe189334bf418b575f2ae7",
@@ -392,6 +412,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "719f39df-37a7-4ee6-8170-c3d1db342251",
@@ -408,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -429,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "80ac2756-c211-4e2c-96ba-f025afb801d7",
     "_uuid": "d72df9859e01eaaab1a3ca2b867b8be42d01b4b3",
@@ -449,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "baa77529-f9e6-476c-8f5a-beb7879429c6",
     "_uuid": "96f88953ca5028e7293e610996abb700ecc59c4e",
@@ -474,6 +495,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "b8d8c2d1-06a0-49b4-9fc7-4864fe95a360",
@@ -489,6 +511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "4abb7f15-2666-4157-ac04-e32482ec07eb",
@@ -500,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "1477483f-069b-43f3-abff-d9764aa08238",
     "_uuid": "4159c5b49bc74aa3792fbd86ef7136498dc4e12d",
@@ -550,6 +573,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "1cefe67c-11d2-4f66-af18-374b3becf563",
@@ -560,6 +584,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -575,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b954644f-19d5-4edc-acc8-cf943a58534b",
     "_uuid": "74d6076bd9236daf2cefd6c32b79119f6437923d",
@@ -719,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -733,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -750,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "bb967c8a-c320-4a50-a121-d1b743c3bda3",
     "_uuid": "d71f618046995492830250c1dc32724d1bd3b9a0",
@@ -764,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "48f02158-1296-452d-91da-608d5fe57766",
     "_uuid": "4bad1ecdea38f903418030df660ab2bcf7ac6933",
@@ -777,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "0f4bf4d5-5653-45a9-8aff-8363940e2a2a",
     "_uuid": "09fea57beddf9b0a3f29c40d89d8097be23046ab",
@@ -792,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -805,6 +830,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -814,6 +840,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "_cell_guid": "0f06f4e6-8564-4cc5-b7da-87d5c006e833",
@@ -826,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "6ef57b0c-9723-4f40-b8c3-e2be60784f91",
     "_uuid": "9401c53ce8a950e7aebf3fbf62faf29c5788bf65",
@@ -842,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "d0b132d9-ecae-4ea0-b5f1-64fc90b8a358",
     "_uuid": "6787d0472b874437a300ac0d32e20eb3c666de09",
@@ -856,6 +883,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -866,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b768a96d-8f55-440f-b268-26fb613acc59",
     "_uuid": "dfcfa465aa94260c2db0a6c87c9dea05cc0c45de",
@@ -879,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -917,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -932,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "39d76ad5-c0b0-4007-b04d-f885e67bd0d3",
     "_uuid": "8c304bf4dca9102a7c78af2c4c6298caf46a1ed9",
@@ -962,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "2d5be6b3-51f3-4b79-af78-53e2550edc69",
     "_uuid": "861630a841959c68f0ce446f9d11c0561c514237",
@@ -1024,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
